welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: ';' expected but 'if' found.
			} if (getDirection() == Direction.EST){
                          ^SnakeBuggle:21: error: expected start of definition
override def run() {
         ^SnakeBuggle:29: error: Unmatched closing brace '}' ignored here
}
^